
syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "game";

package playerNetwork;

service PlayerNetwork {
  rpc GetAuth(AuthRequest) returns (UUID);
  rpc GetRegionPlayerDataList(google.protobuf.Empty) returns (PlayerDataList);
  rpc LoginPlayerData(RegionData) returns (PlayerData);
  rpc AddPoint(AddPointRequest) returns(AddPointResponse);
  rpc ServerStreamServerEvents (google.protobuf.Empty) returns (stream StreamServerEventsResponse);
  rpc JoinChatRoom(google.protobuf.Empty) returns (JoinChatRoomResponse);
  rpc LeaveChatRoom(google.protobuf.Empty) returns (LeaveChatRoomResponse);
  rpc Chat(ChatRequest) returns (ChatResponse);
  rpc GetTopRankList(google.protobuf.Empty) returns (RankList);
}

message UUID{
  bytes value = 1;
}

message RegionData{
    int64 regionIndex = 1;
}

message PlayerData{
    int64 regionIndex = 1;
    string name = 2;
    int32 point = 3;
}

message RankData{
    string name = 1;
    int32 point = 2;
}

message RankList{
    repeated RankData ranks = 1;
}

message ChatRoom{
  int32 regionIndex = 1;
}

message PlayerDataList{
  repeated PlayerData playerDataList = 1;
}

message RoomList{
  repeated ChatRoom chatRooms = 1;
}

message AuthRequest{
  string name = 1;
}

message AddPointRequest{
  int32 addPoint = 1;
}

message AddPointResponse{
  int32 addedPoint = 1;
}

message ChatRequest{
  string message = 2;
}
message ChatResponse{
  bool success = 1;
}
message JoinChatRoomResponse{
  bool success = 1;
}
message LeaveChatRoomResponse{
  bool success = 1;
}


message StreamServerEventsResponse {
  message OnChat{
    string roomInfo = 1;
    string otherPlayer = 2;
    string message = 3;
  }
  message OnClosed{
    string reason = 1;
  }
  oneof action {
    OnChat onChat = 1;
    OnClosed onClosed = 2;
  }
}

